--- a/views/book.ejs
+++ b/views/book.ejs
@@ -1,15 +1,16 @@
+<!-- book.ejs -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book</title>
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
-<body>
+<center><body>
     <h1><%= book.title %></h1>
     <p>Author: <%= book.author %></p>
     <a href="/update/<%= book.id %>">Edit</a>
     <a href="/delete/<%= book.id %>">Delete</a>
     <a href="/">Back to List</a>
 </body>
+</center>
 </html>
