--- a/views/books.ejs
+++ b/views/books.ejs
@@ -1,29 +1,32 @@
+<!-- books.ejs -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books</title>
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
+<center>
 <body>
     <h1>Books</h1>
-    <tr>
-        <td>Title</td>
-        <td>Author</td>
-        <td>Actions</td>
-    </tr>
-    <% for(var i=0; i < books.length; i++) { %>
+    <table>
         <tr>
-            <td><%= books[i].title %></td>
-            <td><%= books[i].author %></td>
-            <td>
-                <a href="/book/<%= books[i].id %>"></a>
-                <a href="/update/<%= books[i].id %>">Edit</a>
-                <a href="/delete/<%= books[i].id %>">Delete</a>
-            </td>
+            <td>Title</td>
+            <td>Author</td>
+            <td>Actions</td>
         </tr>
+        <% for(var i=0; i < books.length; i++) { %>
+            <tr>
+                <td><%= books[i].title %></td>
+                <td><%= books[i].author %></td>
+                <td>
+                    <a href="/book/<%= books[i].id %>">View</a>
+                    <a href="/update/<%= books[i].id %>">Edit</a>
+                    <a href="/delete/<%= books[i].id %>">Delete</a>
+                </td>
+            </tr>
         <% } %>
     </table>
     <a href="/create">Create New Book</a>
-</body>
+</body> 
+</center>
 </html>
