--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,21 +1,23 @@
+<!-- create.ejs -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Book</title>
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
+<center>
 <body>
     <h1>Create Book</h1>
-    <form method="POST" action="/create">
-        <label for="title">Title:</label>
-        <input type="text" name="title" id="title">
-        <br>       
-        <label for="author">Author:</label>
-        <input type="text" name="author" id="author">
-        <br>
-        <input type="submit" value="Create">
+    <form method="post" action="/create">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title">
+            <br>
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author">
+            <br>
+            <input type="submit" value="create">
     </form>
     <a href="/">Back to List</a>
 </body>
+</center>
 </html>
