--- a/views/update.ejs
+++ b/views/update.ejs
@@ -1,23 +1,23 @@
+<!-- update.ejs -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Book</title>
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
+<center>
 <body>
     <h1>Update Book</h1>
     <form method="post" action="/update/<%= book.id %>">
-        <label for="title">Title:</label>
-        <input type="text" name="title" id="title" value="<%= book.title %>">
-        <br>
-        <label for="author">Author:</label>
-        <input type="text" name="author" id="author" value="<%= book.author %>">
-        <br>
-        <input type="submit" value="Update">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" value="<%= book.title %>">
+            <br>
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author" value="<%= book.author %>">
+            <br>
+            <input type="submit" value="Update">
     </form>
-    <a href="/book/%<= book.id %>">View</a>
-    <a href="/delete/<%= book.id %>">Delete</a>
     <a href="/">Back to List</a>
 </body>
+</center>
 </html>
