--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,118 +1,118 @@
-body {
+body { 
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
-}
-
-h1 {
+  }
+  
+  h1 {
     text-align: center;
     margin-top: 30px;
     margin-bottom: 50px;
     font-size: 36px;
-    color: #2C3E50;
-}
-
-table {
+    color: #2c3E50;
+  }
+  
+  table {
     border-collapse: collapse;
     width: 100%;
-}
-
-th, td {
+  }
+  
+  th, td {
     text-align: left;
     padding: 16px;
-}
-
-th {
-    background-color: #2C3E50;
+  }
+  
+  th {
+    background-color: #2c3E50;
     color: white;
     font-weight: 600;
     text-transform: uppercase;
-}
-
-tr:nth-child(even) {
+  }
+  
+  tr:nth-child(even) {
     background-color: #f5f5f5;
-}
-
-/* Style the form */
-form {
+  }
+  
+  form {
     width: 50%;
     margin: auto;
-    border: 2px solid #2C3E50;
+    border: 2px solid #2c3E50;
     padding: 20px;
     border-radius: 5px;
-}
-
-label {
+  }
+  
+  label {
     display: block;
     font-weight: bold;
     margin-bottom: 10px;
-}
-
-input[type="text"] {
+  }
+  
+  input[type=text], input[type=number] {
     width: 100%;
-    padding: 8%;
+    padding: 8px;
     box-sizing: border-box;
+    border: none;
     border-radius: 5px;
-    border: none;
-    background-color: #f2f2f2;
-} 
-
-input[type="submit"] {
-    background-color: #2C3E50;
-    color: white;
-    border: none;
+    background-color: #f5f5f5;
+    align-items: center;
+  }
+  
+  input[type=submit] {
     padding: 10px 16px;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 5px;
+    background-color: #2c3E50;
+    color: white;
     font-size: 16px;
     cursor: pointer;
-    border-radius: 5px;
     margin-top: 10px;
-}
-
-/* Style the links */
-
-a {
+    align-items: center;
+  }
+  
+  a {
     display: inline-block;
     margin: 10px;
-    color: #2C3E50;
+    color: #2c3E50;
     text-decoration: none;
     font-size: 18px;
     font-weight: 600;
     border-bottom: 2px solid transparent;
-    transition: border-bottom-color 0.2s;
-}
-
-a:hover {
-    border-bottom-color: #2C3E50;
-}
-
-.link-center {
+    transition: border-bottom 0.2s;
+  }
+  
+  a:hover {
+    border-bottom-color: 2px solid #2c3E50;
+  }
+  
+  .link-center a {
     text-align: center;
     margin-top: 20px;
-}
-
-.link-center a {
+  }
+  
+  .link-center a {
     display: inline-block;
     margin: 10px;
-    color: #2C3E50;
+    color: #2c3E50;
     text-decoration: none;
     font-size: 18px;
-    font-size: 600;
+    font-weight: 600;
     border-bottom: 2px solid transparent;
-    transition: border-bottom-color 0.2s;
-}
-
-.link-center a:hover {
-    border-bottom-color: #2C3E50;
-}
-
-.book-table {
+    transition: border-bottom 0.2s;
+  }
+  
+  .link-center a:hover {
+    border-bottom-color: #2c3E50;
+  }
+  
+  .book-table {
     border-collapse: collapse;
     width: 75%;
     margin: 0 auto;
     margin-bottom: 20px;
-    border-bottom: 2px solid #2C3E50;
-}
-
-th, td {
+    border-bottom: 2 px solid #2c3E50;
+  }
+  
+  th, td {
     text-align: left;
     padding: 16px;
-}
+  }
